# kalman-vs-imm-engine

./: .gitignore  README.md  kalman_cli.py  pyproject.toml  requirements.txt
analysis/: derive_adjustments.py  derive_sub_regime_adjustments.py  estimate_loadings.py  factor_validation.py  sensitivity_analysis.py
backtests/: bootstrap_ci_comparison.py  c1_validation.py  calibration_fix_comparison.py  diagnostic_comparison.py  em_tpm_comparison.py  full_history_backtest.py  multi_regime_backtest.py  p0_comparison.py  p1_comparison.py  p2_comparison.py  p2b_comparison.py  p3_comparison.py  p4_comparison.py  p5_comparison.py  p6_comparison.py  stagflation_fix_comparison.py  vs_imm_backtest.py
benchmarks/: chauvet_piger_benchmark.py  hamilton_benchmark.py
data/: backtest_data_cache.csv  backtest_data_cache_51yr.csv  full_history_cache.csv  us_inflation_data.csv
experiments/: calibration_from_history.py  state_estimator_experiment.py  truf_state_estimator_experiment.py
gauge-lab/: pyproject.toml
gauge-lab/data/: README.md
gauge-lab/experiments/: exp0_innovation_whiteness.py
gauge-lab/results/: exp0_results.json
heimdall/: __init__.py  adaptive_calibration.py  bootstrap_ci.py  calibrated_persistence.py  calibration_service.py  correlated_shocks.py  cumulator.py  duration_tpm.py  em_tpm.py  gas_noise.py  imm_tracker.py  kalman_bridge.py  kalman_filter.py  recalibration.py  regime_diagnostics.py  regime_loadings.py  regime_noise.py  state_tpm.py  stream_pipeline.py  trigger_service.py
tests/: test_heimdall_calibration.py  test_heimdall_imm.py  (+2 more)
(+27 files in other folders)
