[project]
name = "gauge-lab"
version = "0.1.0"
description = "Gauge-theoretic extensions to the Heimdall economic state estimator"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26",
    "scipy>=1.12",
    "matplotlib>=3.8",
    "statsmodels>=0.14",
]

[project.optional-dependencies]
dev = ["pytest", "ipython"]

[tool.pytest.ini_options]
testpaths = ["tests"]
